--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,9 @@
 	<title>Hello coursera!</title>
 </head>
 <body>
-<h1>hello coursera</h1>
+<h1>hello coursera, hi</h1>
+<h2>course work</h2>
+	<p>iwfjvsdnkslfjworhnsklfhn</p>
+	<h3>hfequj</h3>
 </body>
 </html>
