--- a/site/index.html
+++ b/site/index.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello coursera!</title>
+	<title>paper to digital</title>
 </head>
 <body>
-<h1>hello coursera, hi</h1>
-<h2>course work</h2>
-	<p>iwfjvsdnkslfjworhnsklfhn</p>
-	<h3>hfequj</h3>
+	fgsrhtdjyf.
 </body>
 </html>
