--- a/site/index.html
+++ b/site/index.html
@@ -146,7 +146,7 @@
               <p class="price">4.45</p>
             </article>
              <hr style="text-align: auto; width: 90%; height: 3px; background-color: brown; border-color: brown; margin-top: 5%;">
-             <p style="margin-top: 10%; padding-bottom: 5%;">123 Coffe Land Way</p>
+             <p style="margin-top: 10%; padding-bottom: 5%;">123 Cafe Land Way</p>
 
 
         </section>
